[gd_scene load_steps=13 format=3 uid="uid://bnitxpbh4bf8f"]

[ext_resource type="Script" uid="uid://bdmsjgmi1yjt6" path="res://Windows/AdView/adview_window.gd" id="1_f8uj6"]
[ext_resource type="Texture2D" uid="uid://b5o6pngijgjk5" path="res://icon.svg" id="2_ryqhe"]
[ext_resource type="Texture2D" uid="uid://bwuqv28nlttnk" path="res://Windows/AdView/Banners/bird_wildlife_sky_clouds.jpg" id="2_wi5xc"]
[ext_resource type="Texture2D" uid="uid://bwdw7gxl1mo3n" path="res://Windows/AdView/bannerTop.png" id="3_6ymsn"]
[ext_resource type="AudioStream" uid="uid://bptgcm71sm6i" path="res://Windows/AdView/324404__joedeshon__film_static_03.ogg" id="3_ml4ue"]
[ext_resource type="Texture2D" uid="uid://dalnagekvnr1t" path="res://Windows/AdView/Banners/bry.jpg" id="3_ulnt8"]
[ext_resource type="Texture2D" uid="uid://dwwijf7haqcii" path="res://Windows/AdView/Banners/hand_key_house_keys.jpg" id="4_ugq8p"]
[ext_resource type="Texture2D" uid="uid://cww2p6eev4eh1" path="res://Windows/AdView/Banners/kyle.jpg" id="5_wgmxu"]
[ext_resource type="Texture2D" uid="uid://cn2sdy8kmjons" path="res://Windows/AdView/Banners/little_girl_in_forest.jpg" id="6_x4rqp"]
[ext_resource type="Texture2D" uid="uid://bfuqwmkp0ddtt" path="res://Windows/AdView/Banners/woodland_path.jpg" id="7_rtw6y"]

[sub_resource type="Gradient" id="Gradient_f8uj6"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ryqhe"]
gradient = SubResource("Gradient_f8uj6")
fill_from = Vector2(0.5070422, 1)
fill_to = Vector2(0.5070422, 0)

[node name="AdviewWindow" type="Window"]
oversampling_override = 1.0
title = "AdView: Make Money Watching Ads"
position = Vector2i(7, 36)
size = Vector2i(800, 600)

[node name="AdviewWindow" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ryqhe")
script = ExtResource("1_f8uj6")
ads = Array[CompressedTexture2D]([ExtResource("2_wi5xc"), ExtResource("3_ulnt8"), ExtResource("4_ugq8p"), ExtResource("5_wgmxu"), ExtResource("6_x4rqp"), ExtResource("7_rtw6y")])

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AdviewWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autoplay = true
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="AdviewWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="AdviewWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6869352, 0.3161154, 0.22683123, 1)
theme_override_font_sizes/font_size = 32
text = "AdView"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="AdviewWindow"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
max_value = 30.0

[node name="ImageAd" type="TextureRect" parent="AdviewWindow"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 2
texture = ExtResource("2_ryqhe")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="AdviewWindow/ImageAd"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 2
texture = ExtResource("3_6ymsn")
expand_mode = 1

[node name="Close" type="Button" parent="AdviewWindow/ImageAd"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_bottom = 31.0
grow_horizontal = 0
text = "x"

[node name="HBoxContainer" type="HBoxContainer" parent="AdviewWindow"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -66.0
offset_right = 284.0
offset_bottom = -26.0
grow_vertical = 0

[node name="Label" type="Label" parent="AdviewWindow/HBoxContainer"]
layout_mode = 2
text = "Balance: $"

[node name="CashOut" type="Button" parent="AdviewWindow/HBoxContainer"]
layout_mode = 2
text = "Cash Out ($5 minimum)"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AdviewWindow"]
stream = ExtResource("3_ml4ue")

[connection signal="close_requested" from="." to="AdviewWindow" method="_on_adview_window_close_requested"]
[connection signal="finished" from="AdviewWindow/VideoStreamPlayer" to="AdviewWindow" method="_on_video_stream_player_finished"]
[connection signal="pressed" from="AdviewWindow/ImageAd/Close" to="AdviewWindow" method="_on_close_pressed"]
[connection signal="pressed" from="AdviewWindow/HBoxContainer/CashOut" to="AdviewWindow" method="_on_cash_out_pressed"]
